<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_file_explorer"
        android:title="@string/file_explore"
        android:icon="@drawable/ic_folder_48dp"
        android:visible="true"
        app:showAsAction="always"/>
    <item
        android:id="@+id/nav_upload_channel"
        android:title="@string/upload_channel"
        android:icon="@drawable/ic_cloud_upload_black_24dp"
        android:visible="true"
        app:showAsAction="always"/>
    <item
        android:id="@+id/nav_download_channel"
        android:title="@string/download_channel"
        android:icon="@drawable/ic_cloud_download_black_24dp"
        android:visible="true"
        app:showAsAction="always"/>
    <item
        android:id="@+id/nav_app_channel"
        android:title="@string/app_channel"
        android:icon="@drawable/ic_insert_drive_file_black_24dp"
        android:visible="true"
        app:showAsAction="always"/>
    <item
        android:id="@+id/nav_download"
        android:title="@string/local_download"
        android:icon="@drawable/ic_file_download"
        android:visible="true"
        app:showAsAction="always"/>
    <item
        android:id="@+id/nav_advertise"
        android:title="@string/dip_advertise"
        android:icon="@drawable/ic_advertise"
        android:visible="false"/>
</menu>