<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/adv_folder_back"
        android:title="@string/fe_back"
        android:icon="@drawable/ic_undo_black_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/adv_folder_upload"
        android:title="@string/fe_upload"
        android:icon="@drawable/ic_file_upload_black_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/adv_folder_new_folder"
        android:title="@string/fe_new_folder"
        android:icon="@drawable/ic_folder_48dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/adv_folder_paste"
        android:title="@string/fe_paste"
        android:icon="@drawable/ic_content_paste_black_24dp"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/adv_folder_reload"
        android:title="@string/fe_reload"
        android:icon="@drawable/ic_autorenew_black_24dp"
        app:showAsAction="ifRoom"/>
</menu>